# Aspire

./: .editorconfig  .gitattributes  .gitignore  .gitignore.bak  .mcp.json  Aspire.CommunityToolkit.sln  Aspire.sln  CHANGE-LOG.md  CODEOWNERS  CONTRIBUTING.md  CommunityToolkit-Aspire.sln  CommunityToolkit.Aspire.Hosting.Kind.slnx  CommunityToolkit.Aspire.sln  CommunityToolkit.Aspire.sln.DotSettings  CommunityToolkit.Aspire.slnx  CommunityToolkit.Aspire.slnx.bak  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  INTEGRATION_PROGRESS.md  LICENSE  README.md  Squad.slnx  azure.yaml  example-roadmap.md  global.json  mkdocs.yml  msbuild.binlog  nuget.config  perl-typescript-support-plan.md  perl-typescript-support-roadmap.md
.ai-team/: decisions.md  routing.md  team.md
.claude/: settings.local.json
.config/: dotnet-tools.json
.devcontainer/: devcontainer-lock.json  devcontainer.json  on-create.sh  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
CommunityToolkit.Aspire.Hosting.LlamaCpp/: LlamaCppIResourceBuilderExtensions.cs  LlamaCppServerPlatformOptimization.cs  LlamaCppServerResource.cs  LlamaServerContainerImageTags.cs
CommunityToolkit.Aspire.Hosting.Minio.ApiService/: CommunityToolkit.Aspire.Hosting.Minio.ApiService.csproj  Program.cs
CommunityToolkit.Aspire.Hosting.Minio.AppHost/: CommunityToolkit.Aspire.Hosting.Minio.AppHost.csproj  Program.cs
contrib/: .editorconfig  .gitignore  (+2 more)
examples/python/uv-api/: .gitignore  pyproject.toml
examples/python/uv-api/src/uv_api/: __init__.py
(+3476 files in other folders)
